Aplicando funcionalidades inetrnas de Bitrix

--- a/app/app.html
+++ b/app/app.html
@@ -37,35 +37,25 @@
                     </button>
                     <div class="sidebar-submenu">
                         <button class="sidebar-subitem is-active"
+                                id="nav-telefonia-overview"
                                 data-module="telefonia"
                                 data-view="overview">
                             Visão geral
                         </button>
                         <button class="sidebar-subitem"
+                                id="nav-telefonia-realizadas"
                                 data-module="telefonia"
                                 data-view="chamadas_realizadas">
                             Chamadas realizadas
                         </button>
                         <button class="sidebar-subitem"
+                                id="nav-telefonia-atendidas"
                                 data-module="telefonia"
                                 data-view="chamadas_atendidas">
                             Chamadas atendidas
                         </button>
-                        <!-- Futuro: chamadas perdidas, por status, etc. -->
                     </div>
                 </div>
-
-                <!-- Futuro: Leads, Negócios, etc. -->
-                <!--
-                <div class="sidebar-group">
-                    <button class="sidebar-item sidebar-item-module"
-                            data-module="leads"
-                            data-view="overview">
-                        🧲 Leads
-                    </button>
-                </div>
-                -->
-
             </nav>
 
             <!-- Área principal do dashboard -->
@@ -90,7 +80,7 @@
     <script src="../core/logging.js"></script>
     <script src="../core/url-utils.js"></script>
 
-    <!-- Router / layout base -->
+    <!-- Layout / refs / router -->
     <script src="../ui/layout.js"></script>
     <script src="../core/router.js"></script>
 
