Ajustes de barra de navegação dos módulos e melhoria de carregamento do filtro de colaboradores.

--- a/app/app.html
+++ b/app/app.html
@@ -35,8 +35,8 @@
                             data-view="overview">
                         📞 Telefonia
                     </button>
-                    <div class="sidebar-submenu">
-                        <button class="sidebar-subitem is-active"
+                    <div class="sidebar-submenu is-collapsed">
+                        <button class="sidebar-subitem"
                                 data-module="telefonia"
                                 data-view="overview">
                             Visão geral
