--- a/app/app.html
+++ b/app/app.html
@@ -51,6 +51,11 @@
                                 data-view="chamadas_realizadas">
                             Chamadas realizadas
                         </button>
+                        <button class="sidebar-subitem"
+                                data-module="telefonia"
+                                data-view="analise_comercial">
+                            Análise Comercial
+                        </button>
                     </div>
                 </div>
             </nav>
@@ -86,11 +91,13 @@
     <script src="../modules/telefonia/dashboard/telefonia.dashboard.overview.js"></script>
     <script src="../modules/telefonia/dashboard/telefonia.dashboard.inbound.js"></script>
     <script src="../modules/telefonia/dashboard/telefonia.dashboard.outbound.js"></script>
+    <script src="../modules/telefonia/dashboard/telefonia.dashboard.commercial.js"></script>
 
     <!-- service -->
     <script src="../modules/telefonia/service/telefonia.service.core.js"></script>
     <script src="../modules/telefonia/service/filters/telefonia.filter.collaborator.js"></script>
     <script src="../modules/telefonia/service/filters/telefonia.filter.period.js"></script>
+    <script src="../modules/telefonia/service/filters/telefonia.filter.calltype.js"></script>
     <script src="../modules/telefonia/service/providers/telefonia.provider.vox.js"></script>
     <script src="../modules/telefonia/service/telefonia.service.js"></script>
 
