--- a/app/app.html
+++ b/app/app.html
@@ -99,6 +99,7 @@
     <script src="../modules/telefonia/service/filters/telefonia.filter.period.js"></script>
     <script src="../modules/telefonia/service/filters/telefonia.filter.calltype.js"></script>
     <script src="../modules/telefonia/service/providers/telefonia.provider.vox.js"></script>
+    <script src="../modules/telefonia/service/providers/telefonia.provider.crm.js"></script>
     <script src="../modules/telefonia/service/telefonia.service.js"></script>
 
     <!-- module -->
